--- a/src/scss/pages/Home/_Layout.scss
+++ b/src/scss/pages/Home/_Layout.scss
@@ -1,4 +1,4 @@
-section {
+#home section {
   padding-top: 48px;
   padding-bottom: 48px;
 
